public static class PlayerConstants
{
    // Actions
    public static string ActionMove = "Move";
    public static string ActionSplit = "Split";
    public static string ActionInteract = "Interact";
    public static string ActionInventory = "Inventory";
    public static string ActionDocumentation = "Documentation";
    public static string ActionMousePos = "MousePosition";

    // Camera states
    public static string CameraStateRyo = "Ryo Camera State";
    public static string CameraStateShinen = "Shinen Camera State";

    // Animation parameters
    public static string AnimParamVelocity = "Velocity";
    public static string AnimParamVerticalMovement = "VMovement";
    public static string AnimParamPositiveMovement = "PosMovement";
}
