public static class PlayerConstants
{
    // Actions
    public static string ActionMove = "Move";
    public static string ActionSplit = "Split";

    // Camera states
    public static string CameraStateRyo = "Ryo Camera State";
    public static string CameraStateShinen = "Shinen Camera State";

    // Animation parameters
    public static string AnimParamVelocity = "Velocity";
    public static string AnimParamVerticalMovement = "VMovement";
    public static string AnimParamPositiveMovement = "PosMovement";
}
